# drf-sessions

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  manage.py  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: test.yml
drf_sessions/: admin.py  apps.py  auth.py  checks.py  choices.py  compat.py  contexts.py  forms.py  managers.py  models.py  services.py  settings.py  types.py  validators.py
drf_sessions/base/: auth.py  models.py
drf_sessions/migrations/: 0001_initial.py  0002_rename_session_user_mgmt_idx_session_mgmt_idx.py
drf_sessions/templates/admin/drf_sessions/refreshtoken/: change_list.html
drf_sessions/utils/: generators.py  tokens.py
drf_sessions_project/: asgi.py  settings.py  wsgi.py
tests/: test_admin.py  test_auth.py  test_choices.py  test_compat.py  test_contexts.py  test_forms.py  test_managers.py  test_models.py  test_services.py  test_settings.py  test_types.py  test_validators.py
tests/utils/: test_generators.py  test_tokens.py
