[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drf-sessions"
version = "0.1.0"
description = "Stateful, database-backed session management for Django Rest Framework with JWT access tokens, rotating refresh tokens, and comprehensive security features"
keywords = ["django", "django-rest-framework", "jwt", "authentication", "session-management", "security", "python", "drf", "refresh-token", "token-rotation", "stateful-jwt"]

license = "BSD-3-Clause"
license-files = ["LICENSE"]
readme = { file = "README.md", content-type = "text/markdown" }

authors = [{ name = "Gabriel Idenyi" }]
maintainers = [{ name = "Gabriel Idenyi" }]

requires-python = ">=3.9"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=4.2,<6.0",
    "djangorestframework>=3.14,<4.0",
    "PyJWT>=2.11,<3.0",
    "swapper>=1.3,<2.0",
    "uuid6==2025.0.1",
    "typing-extensions>=4.0; python_version < '3.11'",
]

[project.optional-dependencies]
crypto = ["cryptography>=3.4.0"]

[project.urls]
Homepage = "https://github.com/idenyigabriel/drf-sessions"
Documentation = "https://github.com/idenyigabriel/drf-sessions/blob/main/README.md"
Repository = "https://github.com/idenyigabriel/drf-sessions"
Issues = "https://github.com/idenyigabriel/drf-sessions/issues"
Changelog = "https://github.com/idenyigabriel/drf-sessions/blob/main/CHANGELOG.md"